--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
     <div id="carousel" class="carousel">
       <h1 id="name">Callebe Abdalla</h1>
       <div class="carousel-container">
-        <img class="img" src="/home/leonardo/gitHub/niver/WhatsApp Image 2023-06-10 at 19.56.34.jpeg" alt="Imagem 1">
-        <img class="img" src="/home/leonardo/gitHub/niver/WhatsApp Image 2023-06-10 at 19.56.35 (1).jpeg" alt="Imagem 2">
-        <img class="img" src="/home/leonardo/gitHub/niver/WhatsApp Image 2023-06-10 at 21.37.14.jpeg" alt="Imagem 3">
-        <img class="img" src="/home/leonardo/gitHub/niver/WhatsApp Image 2023-06-10 at 19.56.35.jpeg" alt="Imagem 4">
+        <img class="img" src="assets/image1.jpeg" alt="Imagem 1">
+        <img class="img" src="assets/image2.jpeg" alt="Imagem 2">
+        <img class="img" src="assets/image3.jpeg" alt="Imagem 3">
+        <img class="img" src="assets/image4.jpeg" alt="Imagem 4">
       </div>
     </div>
     <div id="div1">
@@ -37,19 +37,19 @@
         <h3>Confirme sua presença</h3>
       </div>
       <div class="divdiv">
-        <img class="imgFooter" src="/home/leonardo/gitHub/niver/data.png" alt="whatsapp">
+        <img class="imgFooter" src="assets/data.png" alt="whatsapp">
         <p class="pFooter">05/08/2023</p>
       </div>
       <div class="divdiv">
-        <img class="imgFooter" src="/home/leonardo/gitHub/niver/866ea84044a54929c46407f8d589caff.jpg" alt="whatsapp">
+        <img class="imgFooter" src="assets/866ea84044a54929c46407f8d589caff.jpg" alt="whatsapp">
         <p class="pFooter">16:00</p>
       </div>
       <div class="divdiv">
-        <img class="imgFooter" src="/home/leonardo/gitHub/niver/whatsapp.png" alt="whatsapp">
+        <img class="imgFooter" src="assets/whatsapp.png" alt="whatsapp">
         <p class="pFooter">Tel: (31) 9533-3300</p>
       </div>
       <div class="divdiv">
-        <img class="imgFooter" src="/home/leonardo/gitHub/niver/endereço.png" alt="whatsapp">
+        <img class="imgFooter" src="assets/endereço.png" alt="whatsapp">
         <p class="pFooter">Local: Minha casa</p>
       </div>
     </div>
