--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     var nameElement = document.getElementById("name");
     var fontSize = 48;
     var increasing = true;
-    var colors = ["red", "blue", "green", "yellow"];
+    var colors = ["white", "red", "blue", "green", "yellow"];
     var currentColor = 0;
 
     function animateName() {
