--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
     <div id="header1">
       <h1 id="pr">Venha</h1>
       <h1 id="sc">comemorar</h1>
+      <h1 id="tr">meu</h1>
     </div>
     <div id="header2">
-      <h1 id="qt">meu</h1>
+      <h1 id="qt">segundo</h1>
       <h1 id="qto">aniversário</h1>
     </div>
   </div>
@@ -22,6 +23,7 @@
     <div id="carousel" class="carousel">
       <div class="carousel-container">
         <img class="img" src="assets/image1.jpeg" alt="Imagem 1">
+        <img class="img" src="assets/image5.jpeg" alt="Imagem 4">
         <img class="img" src="assets/image2.jpeg" alt="Imagem 2">
         <img class="img" src="assets/image3.jpeg" alt="Imagem 3">
         <img class="img" src="assets/image4.jpeg" alt="Imagem 4">
@@ -47,7 +49,7 @@
       </div>
       <div class="divdiv">
         <img class="imgFooter" src="assets/endereço.png" alt="whatsapp">
-        <p class="pFooter">Local: Minha casa</p>
+        <p class="pFooter">Largo do tiririca, Porto Firme - MG</p>
       </div>
     </div>
   </footer>
