--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,21 @@
 <html lang="pt-br">
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="fonts/CHERL___.TTF">
   <title>Calebe</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<style>
+  @font-face {
+  font-family: 'CustomFont';
+  src: url('fonts/CHERL__.TTF') format('truetype');
+}
+
+h1 {
+  font-family: 'CustomFont', sans-serif;
+}
+</style>
 <body>
   <div id="header">
     <div id="header1">
@@ -27,6 +38,7 @@
         <img class="img" src="assets/image2.jpeg" alt="Imagem 2">
         <img class="img" src="assets/image3.jpeg" alt="Imagem 3">
         <img class="img" src="assets/image4.jpeg" alt="Imagem 4">
+        <img class="img" src="assets/image6.jpeg" alt="Imagem 4">
       </div>
     </div>
     <div id="div1">
