--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <main>
-    <h1 id="name">Callebe Abdalla</h1>
+    <h1 id="name">Caleb Abdalla</h1>
     <div id="carousel" class="carousel">
       <div class="carousel-container">
         <img class="img" src="assets/image1.jpeg" alt="Imagem 1">
@@ -105,7 +105,7 @@
         }
       } else {
         fontSize--;
-        if (fontSize <= 58) {
+        if (fontSize <= 9) {
           increasing = true;
         }
       }
